[package]
name = "aoc_helper"
version = "0.1.0"
edition = "2021"
description = "Helper enums, structs, and methods for solving Advent of Code."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
priority-queue = "1.3.2"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "vec_graph_benchmark"
harness = false
